[IndexTable] expands right-aligned sort button on hover to prevent hover end flicker

--- a/polaris-react/src/components/IndexTable/IndexTable.scss
+++ b/polaris-react/src/components/IndexTable/IndexTable.scss
@@ -309,6 +309,19 @@ $loading-panel-height: 53px;
   }
 }
 
+/* expands button area to retain hover after button slides to the left */
+.TableHeadingSortButton-heading-align-end:hover::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 95%;
+  height: 100%;
+  width: var(--p-space-6);
+  display: block;
+  animation: none;
+  transition: none;
+}
+
 .TableHeadingSortButton-heading-align-end-currently-sorted {
   transform: translateX(var(--p-space-1));
 
